Cleaned whole project, Added mapsturct, deleted useless methods, code optimized