@@ -5,6 +5,7 @@ import com.company.dto.BrigadeDTO;
 import com.company.dto.BrigadeDoctorDTO;
 import com.company.entity.Brigade;
 import com.company.exceptions.ItemNotFoundException;
+import com.company.mapper.BrigadeMapper;
 import com.company.repository.BrigadeRepository;
 import com.company.repository.CarRepository;
 import com.company.repository.DoctorRepository;
@@ -13,7 +14,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class BrigadeService {
@@ -25,6 +25,7 @@ public class BrigadeService {
     DoctorRepository doctorRepository;
     final
     CarRepository carRepository;
+    final BrigadeMapper brigadeMapper=BrigadeMapper.INSTANCE;
 
     public BrigadeService(BrigadeRepository brigadeRepository, RegionRepository regionRepository, DoctorRepository doctorRepository, CarRepository carRepository) {
         this.brigadeRepository = brigadeRepository;
@@ -33,24 +34,23 @@ public class BrigadeService {
         this.carRepository = carRepository;
     }
 
-    public void createBrigade(BrigadeDTO dto) {
-        Brigade brigade = new Brigade();
-        brigade.setRegion(regionRepository.getRegionByName(dto.getRegionName().toUpperCase()));
-        brigade.setCar(carRepository.getByNumber(dto.getCarNumber()));
-        brigade.setDoctor(doctorRepository.getByPhoneNumber(dto.getDoctorPhoneNumber()));
+    public BrigadeDTO createBrigade(BrigadeDTO dto) {
+        regionRepository.findById(dto.getRegionId()).orElseThrow(()-> new ItemNotFoundException("Region doesn't exist with this ID !"));
+        carRepository.findById(dto.getCarId()).orElseThrow(()->new ItemNotFoundException("Car doesn't exist with this ID !"));
+        doctorRepository.findById(dto.getDoctorId()).orElseThrow(()-> new ItemNotFoundException("Doctor doesn't exist with this ID"));
 
-        brigadeRepository.save(brigade);
+       return brigadeMapper.toBrigadeDTO(brigadeRepository.save(brigadeMapper.toBrigadeEntity(dto)));
     }
 
     public List<BrigadeDTO> getAllByIsBusyField(Boolean isBusy) {
         return brigadeRepository.findAllByIsBusy(isBusy)
                 .stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+                .map(brigadeMapper::toBrigadeDTO)
+                .toList();
     }
 
     public void deleteById(UUID id) {
-        brigadeRepository.deleteById(id);
+        brigadeRepository.delete(brigadeRepository.findById(id).orElseThrow(()-> new ItemNotFoundException("Brigade doesn't exist with this ID")));
     }
 
     public String changeBrigadeCar(BrigadeCarDTO dto) {
@@ -76,14 +76,14 @@ public class BrigadeService {
     }
     public List<BrigadeDTO> getAllList() {
        return brigadeRepository.findAll()
-                .stream().map(this::toDTO)
-                .collect(Collectors.toList());
+                .stream().map(brigadeMapper::toBrigadeDTO)
+                .toList();
     }
 
-    public BrigadeDTO toDTO(Brigade brigade){
-        return BrigadeDTO.builder().carNumber(brigade.getCar().getNumber())
-                .regionName(brigade.getRegion().getName())
-                .doctorPhoneNumber(brigade.getDoctor().getPhoneNumber())
-                .build();
-    }
+//    public BrigadeDTO toDTO(Brigade brigade){
+//        return BrigadeDTO.builder().carId(brigade.getCar().getId())
+//                .regionId(brigade.getRegion().getId())
+//                .doctorId(brigade.getDoctor().getId())
+//                .build();
+//    }
 }
